fixed invisible margins on web page

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ button:hover {
 }
 
 .menu-left, .menu-right {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-bottom: 1rem;
     width: 50%;
     background-color: var(--menu-background-color);
@@ -195,7 +195,7 @@ button:hover {
 
 #menu-section h2 {
     text-align: center;
-    margin: 3em 0 1.5em 0;
+    /* margin: 3em 0 1.5em 0; */
 }
 
 .menu-left h3, .menu-right h3 {
@@ -206,7 +206,7 @@ button:hover {
 
 .menu-left p, .menu-right p {
     line-height: 2em;
-    margin-left: 2em;
+    /* margin-left: 2em; */
 }
 
 .sides {
@@ -214,7 +214,7 @@ button:hover {
     align-items: center;
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    gap: 2em;
 }
 
 .sides:last-child {
@@ -239,7 +239,6 @@ button:hover {
 
 .left-side-text {
     padding-left: 2em;
-    width: 30rem;
 }
 
 .left-side-text p, .right-side-text p{
@@ -249,7 +248,7 @@ button:hover {
 .left-side__ingredients {
     font-size: 0.8em;
     font-weight: bold;
-    margin-left: 2em;
+    /* margin-left: 2em; */
 }
 
 .right-side-text {
@@ -258,12 +257,6 @@ button:hover {
 
 .right-side {
     margin-right: 2em;
-}
-
-#menu-section:after {
-    content: "";
-    display: table;
-    clear: both;
 }
 
 
@@ -554,10 +547,6 @@ hr{
     margin-right: 2rem;
 }
 
-.inputs-container {
-    margin-left: 2rem;
-}
-
 .user-form label, .user-form input {
     display: block;
     margin: 5rem 0;
@@ -780,7 +769,7 @@ hr{
     
     .user-form input {
         height: 1.7rem;
-        width: 20rem;
+        /* width: 20rem; */
     }
 
     .cards-grid {
@@ -846,8 +835,8 @@ hr{
     /* ----- RESERVE HERE ----- */
     
     .reserva {
-        width: 30em;
-        height: 5em;
+        width: 60%;
+        height: 3%;
         margin: 3em auto 10em;
         display: flex;
         align-items: center;
@@ -865,14 +854,13 @@ hr{
     }
 
     .about-us-description {
-        width: 80%;
         font-size: 1.3rem;
     }
 
     /* ----- HOJA DE RECLAMACIONES BOTON ----- */
     .complaints {
-        width: 20em;
-        height: 5em;
+        width: 70%;
+        height: 3%;
         margin: 3em auto;
         display: flex;
         align-items: center;
@@ -920,7 +908,6 @@ hr{
     }
 
     .social-list {
-        width: 100%;
         height: 100%;
         flex-direction: column;
     }
